Try VT in the ThreadPerDriverTaskExecutor